# dream-forge

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: dream-forge.md
.claude/hooks/: post_commit_capture.py
Plan History/: 2.md  3.md  4.md  original.md
raw_sessions/: 20260316-230000.json  20260317-134200.json  20260317-140000.json
skills/dream-forge/: SKILL.md
src/capture/: cli.py  schema.py
src/engine/: abstain.py  calibrate.py  compare.py  confidence.py  data_prep.py  dream.py  experiment_splitter.py  model_loader.py  oss_instruct.py  repo_miner.py  tune.py  verify.py  wake.py
src/eval/: compliance_bench.py  metrics.py
src/orchestrator/: __init__.py  agent_api.py  cycle.py
src/reproduce/: compat_check.py  dataset.py  sanity_gate.py
src/runtime/: best_of_n.py  fast_scorer.py  llamacpp_cett.py  server.py
src/store/: db.py  embeddings.py
tests/: parameter_sweep.py  run_compliance_bench.py  stress_test.py  test_adaptive_server.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  Conv3d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_qwen3_5.py  unsloth_compiled_module_siglip.py
