[project]
name = "dream-forge"
version = "0.1.0"
description = "Sleep/wake fine-tuning framework for self-improving local models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "transformers>=5.2.0",
    "torch>=2.9.0",
    "peft>=0.15.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.0.0",
    # H-neuron detection
    "scikit-learn>=1.6.0,<1.10.0",  # pin below 1.10 — penalty="l1" removed in 1.10
    "numpy>=2.0.0",
    "joblib>=1.4.0",
    # Vector DB + embeddings
    "lancedb>=0.20.0",
    "sentence-transformers>=4.0.0",
    # Data + schema
    "pydantic>=2.10.0",
    "datasets>=3.0.0",
    "pyarrow>=18.0.0",
    # CLI + UX
    "typer>=0.15.0",
    "rich>=13.0.0",
    # Evaluation
    "matplotlib>=3.10.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
dream-forge = "src.capture.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
