[project]
name = "dream-forge"
version = "0.1.0"
description = "Sleep/wake fine-tuning framework for self-improving local models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML — pinned from compat_check 2026-03-15
    "transformers==5.2.0",
    "torch==2.10.0",
    "peft==0.18.1",
    "bitsandbytes==0.49.2",
    "accelerate==1.13.0",
    # H-neuron detection
    "scikit-learn==1.8.0",     # penalty="l1" removed in 1.10; use l1_ratio=1
    "numpy==2.4.3",
    "joblib==1.5.3",
    # Vector DB + embeddings
    "lancedb==0.29.2",
    "sentence-transformers==5.3.0",
    # Data + schema
    "pydantic==2.12.5",
    "datasets==4.3.0",
    "pyarrow==23.0.1",
    # CLI + UX
    "typer==0.24.1",
    "rich==14.3.3",
    # Evaluation
    "matplotlib==3.10.8",
    # DeltaNet fused kernels (Triton-based) — critical for VRAM on Qwen3.5
    "flash-linear-attention==0.4.2",
    "triton-windows==3.6.0.post26 ; sys_platform == 'win32'",
    "triton>=3.6.0 ; sys_platform != 'win32'",
    "unsloth==2026.3.4",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
dream-forge = "src.capture.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
